unpackaged/main/default/objects/Sales_Region__c/Sales_Region__c.object-meta.xml
<CustomObject>
    <label>Sales Region</label>
    <nameField>
        <label>Sales Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>