unpackaged/main/default/objects/Sales_Region__c/fields/AD_Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>AD_Distribution_Group__c</fullName>
    <description>Azure Active Directory Distribution Group for users that want to be notified in addition to the Lead Owner and Inside Sales Rep</description>
    <inlineHelpText>Azure Active Directory Distribution Group for users that want to be notified in addition to the Lead Owner and Inside Sales Rep</inlineHelpText>
    <label>AD Distribution Group</label>
    <type>Email</type>
</CustomField>