unpackaged/main/default/objects/Sales_Region__c/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <description>Identifies the area of the Product, Industry, Business, etc. for this Sales Region</description>
    <inlineHelpText>Identifies the area of the Product, Industry, Business, etc. for this Sales Region</inlineHelpText>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Line</valueSetName>
    </valueSet>
</CustomField>