unpackaged/main/default/objects/Sales_Region__c/fields/Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>