unpackaged/main/default/objects/Sales_Region__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Regions1</relationshipName>
    <type>Lookup</type>
</CustomField>