unpackaged/main/default/objects/Sales_Region__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inside_Sales_Rep__c</columns>
    <columns>Business_Line__c</columns>
    <columns>AD_Distribution_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>