unpackaged/main/default/objects/Sales_Region__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Inside_Sales_Rep__c</columns>
    <columns>AD_Distribution_Group__c</columns>
    <columns>Business_Line__c</columns>
    <columns>Inactive__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Regional_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>